@@ -4,6 +4,7 @@
 * Fix: Remove references to the Subscription extension in the tooltips found on the Payment Methods settings table. PR#55 wcpay#3234
 * Fix: Update the Automatic Recurring Payments column on the Payment Methods table to only show which payment methods are supported by Subscriptions Core. PR#55
 * Tweak: Update deprecation message when calling WC_Subscriptions_Coupon::cart_contains_limited_recurring_coupon() to mention the correct replacement function. PR#53
+* Tweak: Update recurring payments copy on payment gateways page.
 
 2021-11-23 - version 1.2.0
 * Fix: Update tooltip wording when deleting product variation. PR#46
